# etl_precogasolina

./: Preços de Gasolina A sem tributos, à vista, por vigência.xlsx  README.md  etl_pdf.py  pyproject.toml
